--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -9,16 +9,16 @@
     <meta name="theme-color" content="#000000" />
     <title>Joker - Card Game</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Eruda console for debugging on mobile -->
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
     <script>
-      (function () {
-        if ('%MODE%' === 'development') return;
-        if (window.Telegram && window.Telegram.WebApp) return;
-        var script = document.createElement('script');
-        script.src = 'https://telegram.org/js/telegram-web-app.js';
-        script.async = true;
-        document.head.appendChild(script);
-      })();
+      // Initialize Eruda for debugging (can be removed in production later)
+      if (typeof eruda !== 'undefined') {
+        eruda.init();
+        console.log('[Debug] Eruda initialized');
+      }
     </script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
     <div id="root"></div>
