feat(frontend): enhance victory screen UI and improve game screen layout
- Redesign victory screen with improved podium display showing top 3 players
- Add gold/silver/bronze gradients and roman numerals for rankings
- Implement scrollable leaderboard with player positions and scores
- Move timer and round info from top bar to bottom right floating group
- Add crown animation for first place winner and improved styling
- Update LanguageSwitcher position to bottom-right for better UX
- Configure Eruda debug tool with bottom-left positioning by default

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -15,7 +15,29 @@
       // Initialize Eruda for debugging (can be removed in production later)
       if (typeof eruda !== 'undefined') {
         eruda.init();
-        console.log('[Debug] Eruda initialized');
+
+        // Softly set initial position to bottom-left (allow dragging)
+        setTimeout(() => {
+          try {
+            const entry = eruda.get('entry');
+            // Check if user has already moved it manually (stored in localStorage)
+            const hasStoredPos = localStorage.getItem('eruda-entry-pos');
+
+            if (!hasStoredPos && entry && entry.cfg) {
+              // Only set default position if not already customized
+              const size = 50; // approximate button size
+              const margin = 20;
+              // Set to bottom-left
+              entry.cfg.set('pos', {
+                x: margin,
+                y: window.innerHeight - margin - size,
+              });
+              console.log('[Debug] Eruda initial position set to bottom-left');
+            }
+          } catch (e) {
+            console.warn('[Debug] Failed to set Eruda position:', e);
+          }
+        }, 500);
       }
     </script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
